Elasticsearch / Sonarlint improvements